# hub-zpc

./: .gitignore  main.py  nlp-learning.xmind
202604/pretrain_models/Qwen2-0.5B-Instruct/: .msc
202604/pretrain_models/bert-base-chinese/: config.json
202604/week02/: CrossEntropy.py  DNNforward.py  GradientDescent.py  Softmax.py  TorchDemo.py
202604/week02test/: diy_liner.py
202604/week03/: BatchNorm.py  Dropout.py  LSTMforward.py  Pooling.py  RNNforward.py  adam_demo.py  embedding_padding_demo.py  train_chinese_cls_rnn.py
202604/week03test/: model.pt  vocab.json  week03.py
202604/week04/week4/: readme  transformer_interview.py
202604/week04test/: transformer1.py  transformer2.py  transsformer3.py  week04.py
202604/week04test/rnn_lstm/: language_model.py
202604/week05/: nnlm_bert.py
202604/week05/week5/: ARCHITECTURE.md  USAGE_GUIDE.md  readme
202604/week05test/: generate_text.py  transformer_lm.py
202604/week05test/checkpoints/: vocab.json
202604/week06/text_classification/: ARCHITECTURE.md  RESUME_GUIDE.md  USAGE_GUIDE.md  requirements.txt
202604/week06/week6/: readme  (+1 more)
202604/week11/function_call_mcp_cli/: ARCHITECTURE.md  RESUME_GUIDE.md  USAGE_GUIDE.md  pyproject.toml  requirements.txt
202604/week11/function_call_mcp_cli/fincli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
202604/week11/function_call_mcp_cli/mode_mcp/: run_mcp.py
202604/week11/function_call_mcp_cli/mode_mcp/servers/: rag_server.py  weather_server.py
202604/week11/function_call_mcp_cli/output/: compare_result.md
(+230 files in other folders)
